[project]
name = "dst"
version = "0.1.0"
description = "dst"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2",
    "nonebot-adapter-onebot",
    "nonebot-plugin-alconna",
    "httpx"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_alconna"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
